--- a/profe/practica-1.html
+++ b/profe/practica-1.html
@@ -18,7 +18,19 @@
             <div>
                 <p> Aquí están las webs que más me han gustado</p>
                 <ul>
-                    <li> <a href="carlaescalva">Insertar web chulita</a></li>
+                    <li> <a href="https://es.pinterest.com/">Imágenes chulitas</a>
+                        <span>Me gusta para encntrar inspiración</span>
+                    </li>
+                    <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
+                        <span>Lo uso para tener referencias de anatomía</span>
+
+                    </li>
+                    <li> <a href="https://behance.net">Proyectos de gente del mundo</a>
+                        <span>Para poder observar en lo que trabaja la gente</span>
+                    </li>
+                    <li> <a href="https://www.canva.com/es_es/">Plantillas de diseño</a>
+                        <span>Plantillas para presentaciones, índices y mucho más</span>
+
                 </ul>
             </div>
         </main>
