--- a/someoutstandingwebs/index.html
+++ b/someoutstandingwebs/index.html
@@ -7,7 +7,15 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Webs con valores de diseño </title>
 
-        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
+
+        <link rel="icon" type="image/png" href="../assets/icons/favicons/favicon-48x48.png" sizes="48x48" />
+        <link rel="icon" type="image/svg+xml" href="../assets/icons/favicons/favicon.svg" />
+        <link rel="shortcut icon" href="../assets/icons/favicons/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicons/apple-touch-icon.png" />
+        <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+        <link rel="manifest" href="../assets/icons/favicons/site.webmanifest" />
+
 
     </head>
 
@@ -18,7 +26,8 @@
             <div>
                 <p> Aquí están las webs que más me han gustado</p>
                 <ul>
-                    <li> <a href="https://es.pinterest.com/">Imágenes chulitas</a>
+                    <li> <a href="https://es.pinterest.com/" target="_blank">Imágenes chulitas</a>
+                        <img
                         <span>Me gusta para encontrar inspiración</span>
                     </li>
                     <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
