--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
-html <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Webs con valores de diseño </title>
+
+        <link rel="stylesheet" href="../css/index.css" />
+
+        <link rel="icon" type="image/png" href="../assets/icons/favicons/favicon-48x48.png" sizes="48x48" />
+        <link rel="icon" type="image/svg+xml" href="../assets/icons/favicons/favicon.svg" />
+        <link rel="shortcut icon" href="../assets/icons/favicons/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicons/apple-touch-icon.png" />
+        <link rel="manifest" href="../assets/icons/favicons/site.webmanifest" />
+
+    </head>
+
+    <body>
+
+        <!-- Main Content Area with Grid Layout -->
+        <main>
+            <div>
+                <p> Aquí están las webs que más me han gustado</p>
+                <ul>
+                    <li> <a href="https://es.pinterest.com/" target="_blank">Imágenes chulitas</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla 2024-10-17 182045.png"alt="Imágenes variadas" />
+                        <span>Me gusta para encontrar inspiración</span>
+                    </li>
+                    <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (46).png"alt="Maniquí con pose de referencia" />
+                        <span>Lo uso para tener referencias de anatomía</span>
+
+                    </li>
+                    <li> <a href="https://behance.net">Proyectos de gente del mundo</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (47).png"alt="Portadas de proyectos de distintos campos de diseño" />
+                        <span>Para poder observar en lo que trabaja la gente</span>
+                    </li>
+                    <li> <a href="https://www.canva.com/es_es/">Plantillas de diseño</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (48).png"alt="Plantillas para presentaciones de distintos estilos" />
+                        <span>Plantillas para presentaciones, índices y mucho más</span>
+
+                </ul>
+            </div>
+        </main>
+       
+
+    </body>
+
 </html>
