--- a/someoutstandingwebs/index.html
+++ b/someoutstandingwebs/index.html
@@ -13,9 +13,7 @@
         <link rel="icon" type="image/svg+xml" href="../assets/icons/favicons/favicon.svg" />
         <link rel="shortcut icon" href="../assets/icons/favicons/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicons/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="MyWebSite" />
         <link rel="manifest" href="../assets/icons/favicons/site.webmanifest" />
-
 
     </head>
 
@@ -27,17 +25,20 @@
                 <p> Aquí están las webs que más me han gustado</p>
                 <ul>
                     <li> <a href="https://es.pinterest.com/" target="_blank">Imágenes chulitas</a>
-                        <img
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla 2024-10-17 182045.png"alt="Imágenes variadas" />
                         <span>Me gusta para encontrar inspiración</span>
                     </li>
                     <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (46).png"alt="Maniquí con pose de referencia" />
                         <span>Lo uso para tener referencias de anatomía</span>
 
                     </li>
                     <li> <a href="https://behance.net">Proyectos de gente del mundo</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (47).png"alt="Portadas de proyectos de distintos campos de diseño" />
                         <span>Para poder observar en lo que trabaja la gente</span>
                     </li>
                     <li> <a href="https://www.canva.com/es_es/">Plantillas de diseño</a>
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (48).png"alt="Plantillas para presentaciones de distintos estilos" />
                         <span>Plantillas para presentaciones, índices y mucho más</span>
 
                 </ul>
