--- a/index.html
+++ b/index.html
@@ -24,21 +24,23 @@
             <div>
                 <p> Aquí están las webs que más me han gustado</p>
                 <ul>
-                    <li> <a href="https://es.pinterest.com/" target="_blank">Imágenes chulitas</a>
-                        <img class="fit-picture"src="C:..\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla 2024-10-17 182045.png"alt="Imágenes variadas" />
-                        <span>Me gusta para encontrar inspiración</span>
+                    <li>
+                        <a href="https://es.pinterest.com/">
+                            <img src="../webapp/assets/icons/images/Captura de pantalla 2024-10-17 182045.png  alt="Imagenes chulitas" style="width: 1890px;px;height:auto;">
+                        </a>
+                            <p>Me gusta para encontrar inspiración</p>
                     </li>
                     <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
-                        <img class="fit-picture"src="C:..\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (46).png"alt="Maniquí con pose de referencia" />
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (46).png"alt="Maniquí con pose de referencia" />
                         <span>Lo uso para tener referencias de anatomía</span>
 
                     </li>
                     <li> <a href="https://behance.net">Proyectos de gente del mundo</a>
-                        <img class="fit-picture"src="C:..\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (47).png"alt="Portadas de proyectos de distintos campos de diseño" />
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (47).png"alt="Portadas de proyectos de distintos campos de diseño" />
                         <span>Para poder observar en lo que trabaja la gente</span>
                     </li>
                     <li> <a href="https://www.canva.com/es_es/">Plantillas de diseño</a>
-                        <img class="fit-picture"src="C:..\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (48).png"alt="Plantillas para presentaciones de distintos estilos" />
+                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (48).png"alt="Plantillas para presentaciones de distintos estilos" />
                         <span>Plantillas para presentaciones, índices y mucho más</span>
 
                 </ul>
