--- a/someoutstandingwebs2/index.html
+++ b/someoutstandingwebs2/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+    <link rel="icon" type="image/png" href="../assets/icons/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="../assets/icons/favicon.svg" />
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="../assets/icons/web-app-manifest-192x192.png" />
+</head>
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
