--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
+<head>
+    <link rel="icon" type="image/png" href="../assets/icons/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="../assets/icons/favicon.svg" />
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="../assets/icons/web-app-manifest-192x192.png" />
+</head>
+<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Webs con valores de diseño </title>
+        <title>Webs con valores de diseño</title>
 
         <link rel="stylesheet" href="../css/index.css" />
-
-        <link rel="icon" type="image/png" href="../assets/icons/favicons/favicon-48x48.png" sizes="48x48" />
-        <link rel="icon" type="image/svg+xml" href="../assets/icons/favicons/favicon.svg" />
-        <link rel="shortcut icon" href="../assets/icons/favicons/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/favicons/apple-touch-icon.png" />
-        <link rel="manifest" href="../assets/icons/favicons/site.webmanifest" />
 
     </head>
 
@@ -21,32 +21,32 @@
 
         <!-- Main Content Area with Grid Layout -->
         <main>
-            <div>
-                <p> Aquí están las webs que más me han gustado</p>
-                <ul>
-                    <li>
-                        <a href="https://es.pinterest.com/">
-                            <img src="../webapp/assets/icons/images/Captura de pantalla 2024-10-17 182045.png  alt="Imagenes chulitas" style="width: 1890px;px;height:auto;">
-                        </a>
-                            <p>Me gusta para encontrar inspiración</p>
-                    </li>
-                    <li> <a href="https://webapp.magicposer.com/">Crea poses para tus dibujos</a>
-                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (46).png"alt="Maniquí con pose de referencia" />
-                        <span>Lo uso para tener referencias de anatomía</span>
+          <div>
+            <h1>Aquí están las webs que más me han gustado.</h1>
 
-                    </li>
-                    <li> <a href="https://behance.net">Proyectos de gente del mundo</a>
-                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (47).png"alt="Portadas de proyectos de distintos campos de diseño" />
-                        <span>Para poder observar en lo que trabaja la gente</span>
-                    </li>
-                    <li> <a href="https://www.canva.com/es_es/">Plantillas de diseño</a>
-                        <img class="fit-picture"src="C:\Users\34633\Documents\GitHub\webapp\assets\icons\images\Captura de pantalla (48).png"alt="Plantillas para presentaciones de distintos estilos" />
-                        <span>Plantillas para presentaciones, índices y mucho más</span>
+                 <a href="https://www.phopet.com/">
+                    <img src="../images/Captura de pantalla (50).png" alt="La página de Phopet" style="width: 1890px;px;height:auto;">
+                </a>
+                    <p>Tiene animales muy graciosos</p>
 
-                </ul>
-            </div>
+                 <a href="https://www.mach.studio/">
+                    <img src="../images/Captura de pantalla (51).png" alt="La web de Mach Studio" style="width: 1890px;px;height:auto;">
+                </a>
+                    <p>Tiene unas sanimaciones muy interesantes</p>
+
+                <a href="https://embossed.altervista.org/">
+                    <img src="../images/Captura de pantalla (52).png" alt="La web de Poster Generator" style="width: 1890px;px;height:auto;">
+                </a>
+                    <p>Una herramienta muy útil y original</p>
+
+                 <a href="https://resn.co.nz/">
+                    <img src="../images/Captura de pantalla (53).png" alt="La web de Sculpting Harmony" style="width: 1890px;px;height:auto;">
+                </a>
+                    <p>Una web muy llamativa y variada</p>
+
+
+          </div>
         </main>
-       
 
     </body>
 
