--- a/someoutstandingwebs/index.html
+++ b/someoutstandingwebs/index.html
@@ -25,7 +25,7 @@
             <h1>Aquí están las webs que más me han gustado.</h1>
 
                  <a href="https://www.phopet.com/">
-                    <img src="images/Captura de pantalla (50).png" alt="La página de Phopet" style="width: 1890px;px;height:auto;">
+                    <img src="../images/Captura de pantalla (50).png" alt="La página de Phopet" style="width: 1890px;px;height:auto;">
                 </a>
                     <p>Tiene animales muy graciosos</p>
 
