--- a/someoutstandingwebs/index.html
+++ b/someoutstandingwebs/index.html
@@ -30,17 +30,17 @@
                     <p>Tiene animales muy graciosos</p>
 
                  <a href="https://www.mach.studio/">
-                    <img src="images/Captura de pantalla (51).png" alt="La web de Mach Studio" style="width: 1890px;px;height:auto;">
+                    <img src="../images/Captura de pantalla (51).png" alt="La web de Mach Studio" style="width: 1890px;px;height:auto;">
                 </a>
                     <p>Tiene unas sanimaciones muy interesantes</p>
 
                 <a href="https://embossed.altervista.org/">
-                    <img src="images/Captura de pantalla (52).png" alt="La web de Poster Generator" style="width: 1890px;px;height:auto;">
+                    <img src="../images/Captura de pantalla (52).png" alt="La web de Poster Generator" style="width: 1890px;px;height:auto;">
                 </a>
                     <p>Una herramienta muy útil y original</p>
 
                  <a href="https://resn.co.nz/">
-                    <img src="images/Captura de pantalla (53).png" alt="La web de Sculpting Harmony" style="width: 1890px;px;height:auto;">
+                    <img src="../images/Captura de pantalla (53).png" alt="La web de Sculpting Harmony" style="width: 1890px;px;height:auto;">
                 </a>
                     <p>Una web muy llamativa y variada</p>
 
