--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  <a href="https://www.mach.studio/">
                     <img src="images/Captura de pantalla (51).png" alt="La web de Mach Studio" style="width: 1890px;px;height:auto;">
                 </a>
-                    <p>Tiene unas sanimaciones muy interesantes</p>
+                    <p>Tiene unas animaciones muy interesantes</p>
 
                 <a href="https://embossed.altervista.org/">
                     <img src="images/Captura de pantalla (52).png" alt="La web de Poster Generator" style="width: 1890px;px;height:auto;">
