--- a/404.html
+++ b/404.html
@@ -13,11 +13,20 @@
 </head>
 <body>
     <div class="container">
-        <h1>Error 404</h1>
-        <img src="images/error 404.jpg" alt="Dinosaurio tontito">
+        <figure>
+            <img
+                src="images/error 404.jpg" Article Cover Image"
+                style="width: 100%; height: auto" />
+            <figcaption>
+                Source:
+                <a href="https://cdn2.vectorstock.com/i/1000x1000/63/11/error-design-vector-4346311.jpg" target="_blank">vectorstock</a>
+            </figcaption>
+        </figure>
+
+        
         <p>¡RAWR! La página que buscas ha sido destruida por un meteorito.</p>
         <a href="/" class="button">Volver al pleistoceno</a>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
