--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <div class="container">
         <figure>
             <img
-                src="images/error 404.jpg" Article Cover Image"
+                src="images/error 404.jpg" Article Cover Image
                 style="width: 50%; height: auto" />
             <figcaption>
                 Source:
