--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" type="image/png" href="assets/icons/favicon-48x48.png" sizes="48x48" />
+  <head>
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/icons/favicon-48x48.png"
+      sizes="48x48"
+    />
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
     <link rel="shortcut icon" href="assets/icons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/icons/apple-touch-icon.png"
+    />
     <link rel="manifest" href="assets/icons/web-app-manifest-192x192.png" />
-</head>
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Webs con valores de diseño</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Audiowide|Nunito|Luckiest Guy"
+    />
+  </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>RAWRVENTURES</title>
 
-        <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-    </head>
-
-    <body>
-
-        <!-- Main Content Area with Grid Layout -->
-        <main>
-          <div>
-            <h1>Aquí están las webs que más me han gustado.</h1>
-
-                 <a href="https://www.phopet.com/">
-                    <img src="images/Captura de pantalla (50).png" alt="La página de Phopet" style="width: 1890px;px;height:auto;">
-                </a>
-                    <p>Tiene animales muy graciosos</p>
-
-                 <a href="https://www.mach.studio/">
-                    <img src="images/Captura de pantalla (51).png" alt="La web de Mach Studio" style="width: 1890px;px;height:auto;">
-                </a>
-                    <p>Tiene unas animaciones muy interesantes</p>
-
-                <a href="https://embossed.altervista.org/">
-                    <img src="images/Captura de pantalla (52).png" alt="La web de Poster Generator" style="width: 1890px;px;height:auto;">
-                </a>
-                    <p>Una herramienta muy útil y original</p>
-
-                 <a href="https://resn.co.nz/">
-                    <img src="images/Captura de pantalla (53).png" alt="La web de Sculpting Harmony" style="width: 1890px;px;height:auto;">
-                </a>
-                    <p>Una web muy llamativa y variada</p>
-
-
-          </div>
-        </main>
-
-    </body>
-
+  <body>
+    <header>
+      <h1>RAWRVENTURES</h1>
+      <h2>Un cómic para dinofanáticos</h2>
+    </header>
+    <main>
+      <div class="image-container">
+        <img src="images/Portadasinfondo.png" alt="Dinosaurios" />
+      </div>
+    </main>
+    <main>
+      <p>
+        ¿Alguna vez te has preguntado cómo vivían los dinosaurios? Y no, no me
+        refiero a su alimentación, los huesos que tenían o para qué servían sus
+        cuernos o sus pinchos. Sino a sus verdaderos problemas o ventajas siendo
+        dinosaurios. En este cómic lo descubrirás con risas y diversión.
+      </p>
+    </main>
+  </body>
 </html>
