--- a/someoutstandingwebs/index.html
+++ b/someoutstandingwebs/index.html
@@ -13,7 +13,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Webs con valores de diseño</title>
 
-        <link rel="stylesheet" href="../css/index.css" />
+        <link rel="stylesheet" href="../css/Practica 1.css" />
 
     </head>
 
