--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@
 
   <body>
     <header>
-      <h1>RAWRVENTURES</h1>
+      <header class="navbar">
+        <div class="title">RAWRVENTURES</div>
+        <nav class="menu">
+          <a href="#inicio">Inicio</a>
+          <a href="#personajes">Personajes</a>
+          <a href="#autora">Autora</a>
+        </nav>
+      </header>
+
       <h2>Un cómic para dinofanáticos</h2>
     </header>
     <main>
       <div class="image-container">
-        <img src="images/Portadasinfondo.png" alt="Dinosaurios" />
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Portada%20sin%20fondo.png?updatedAt=1734026575925"
+          alt="Dinosaurios"
+        />
       </div>
     </main>
     <main>
