--- a/index.html
+++ b/index.html
@@ -39,71 +39,40 @@
           <a href="#personajes">Personajes</a>
           <a href="#autora">Autora</a>
         </nav>
-        <div class="image-container">
+        <div class="navbar-image-container">
           <img
             src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Bronti_.png?updatedAt=1734026465626"
             alt="Bronti"
             class="navbar-image"
-            style="
-              width: 100px;
-              height: 50px;
-              object-fit: cover;
-              margin: -20px;
-              margin-right: 50px;
-            "
           />
-
           <img
             src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Trina.png?updatedAt=1734026511326"
             alt="Trina"
             class="navbar-image"
-            style="
-              width: 100px;
-              height: 50px;
-              object-fit: cover;
-              margin: -20px;
-              margin-right: 50px;
-              margin-left: -70px;
-            "
           />
-
           <img
             src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Rexi_.png?updatedAt=1734026488206"
             alt="Rexi"
             class="navbar-image"
-            style="
-              width: 100px;
-              height: 50px;
-              object-fit: cover;
-              margin: -20px;
-              margin-right: 50px;
-              margin-left: -70px;
-            "
           />
           <img
             src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Estus.png?updatedAt=1734026479361"
             alt="Estus"
             class="navbar-image"
-            style="
-              width: 100px;
-              height: 50px;
-              object-fit: cover;
-              margin: -20px;
-              margin-right: 50px;
-              margin-left: -70px;
-            "
           />
         </div>
       </header>
+
       <header>
         <h1>Un cómic para dinofanáticos</h1>
       </header>
     </header>
     <main>
-      <div class="image-container">
+      <div class="portada-container">
         <img
           src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Portada%20sin%20fondo.png?updatedAt=1734026575925"
           alt="Dinosaurios"
+          class="portada-image"
         />
       </div>
     </main>
