--- a/index.html
+++ b/index.html
@@ -40,31 +40,38 @@
           <a href="#autora">Autora</a>
         </nav>
         <div class="navbar-image-container">
-          <img
-            src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Bronti_.png?updatedAt=1734026465626"
-            alt="Bronti"
-            class="navbar-image"
-          />
-          <img
-            src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Trina.png?updatedAt=1734026511326"
-            alt="Trina"
-            class="navbar-image"
-          />
-          <img
-            src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Rexi_.png?updatedAt=1734026488206"
-            alt="Rexi"
-            class="navbar-image"
-          />
-          <img
-            src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Estus.png?updatedAt=1734026479361"
-            alt="Estus"
-            class="navbar-image"
-          />
+          <a href="#bronti"
+            ><img
+              src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Bronti_.png?updatedAt=1734026465626"
+              alt="Bronti"
+              class="navbar-image"
+          /></a>
+
+          <a href="#trina"
+            ><img
+              src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Trina.png?updatedAt=1734026511326"
+              alt="Trina"
+              class="navbar-image"
+          /></a>
+
+          <a href="#rexi"
+            ><img
+              src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Rexi_.png?updatedAt=1734026488206"
+              alt="Rexi"
+              class="navbar-image"
+          /></a>
+
+          <a href="#estus"
+            ><img
+              src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Estus.png?updatedAt=1734026479361"
+              alt="Estus"
+              class="navbar-image"
+          /></a>
         </div>
       </header>
 
       <header>
-        <h1>Un cómic para dinofanáticos</h1>
+        <h1 id="inicio">Un cómic para dinofanáticos</h1>
       </header>
     </header>
     <main>
@@ -84,5 +91,101 @@
         dinosaurios. En este cómic lo descubrirás con risas y diversión.
       </p>
     </main>
+  </body>
+
+  <body>
+    <div id="personajes" class="gallery">
+      <div id="bronti" class="card">
+        <h3>BRONTI</h3>
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Bronti_.png?updatedAt=1734026465626"
+          alt="Bronti"
+        />
+        <p>
+          Es un Brontosaurio, destaca por su largo cuello. Aunque es de gran
+          tamaño, es de lo más pacífico y amable. Le gusta mucho leer y pasear
+          para comer hojas de las copas más altas de los árboles. Siempre está
+          dispuesto a ayudar.
+        </p>
+      </div>
+      <div id="trina" class="card">
+        <h3>TRINA</h3>
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Trina.png?updatedAt=1734026511326"
+          alt="Trina"
+        />
+        <p>
+          Es una Triceratops, destaca por sus tres cuernos. Tiene una
+          personalidad muy optimista y siempre tiene ganas de hacer cosas. Le
+          encanta socializar y estar con sus amigos. Si por lo que sea, estás
+          bajo de ánimos, no dudes en recurrir a ella.
+        </p>
+      </div>
+      <div id="estus" class="card">
+        <h3>ESTUS</h3>
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Estus.png?updatedAt=1734026479361"
+          alt="Estus"
+        />
+        <p>
+          Es un Estegosaurio, destaca por sus púas. Digamos que no es el alma de
+          la fiesta, ya que le encanta dormir. Eso sí, como le preguntes por un
+          tema que le interesa, ya puedes tener palomitas a mano. Puede que no
+          hable mucho, pero es un gran amigo y te acompañará a donde quieras.
+        </p>
+      </div>
+      <div id="rexi" class="card">
+        <h3>REXI</h3>
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Rexi_.png?updatedAt=1734026488206"
+          alt="Rexi"
+        />
+        <p>
+          Es un T-Rex, destaca por sus dientes. Quizá la inteligencia no sea su
+          fuerte, pero nadie puede resistirse a esas garritas que tiene. No va a
+          resolver la economía del Jurásico, pero a una carrera te gana seguro.
+          Sí, es un poco torpe, pero siempre está pensando en sus amigos y eso
+          es lo que le hace tan especial.
+        </p>
+      </div>
+    </div>
+    <section id="autora" class="about-me">
+      <div class="about-content">
+        <img
+          src="https://ik.imagekit.io/1mdebpm31/udit/UDIT/Foto%20de%20perfil.jpg?updatedAt=1735906854158"
+          alt="Foto sobre mí"
+          class="about-img"
+        />
+        <div class="about-text">
+          <h2>Rawrtora</h2>
+          <p>
+            ¿Te gusta Rawrventures? ¡Pues lo he creado yo! Mi nombre es Clara,
+            aunque quizá me hayas visto por otras partes con el combre de Neko.
+            Soy ilustradora, pero también me dedico a otras disciplinas como el
+            maquillaje y el tatuaje. Si eres un gran fan de los dinosaurios y de
+            los cómics, entonces ya tenemos dos cosas en común. ¡Espero que
+            disfrutes mucho de Rawrventrures!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer-content">
+        <p>© 2025 RAWRVENTURES. Todos los derechos reservados.</p>
+        <div class="social-links">
+          <a
+            href="https://www.tiktok.com/@nekoinyourwifi?lang=es"
+            target="_blank"
+            >TikTok</a
+          >
+          <a href="https://x.com/nekoinyourwifi" target="_blank">Twitter</a>
+          <a href="https://www.instagram.com/nekoinyourwifi/" target="_blank"
+            >Instagram</a
+          >
+        </div>
+        <p><a href="#inicio" class="back-to-top">Volver al Pleistoceno</a></p>
+      </div>
+    </footer>
   </body>
 </html>
