--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             >Instagram</a
           >
         </div>
-        <p><a href="#inicio" class="back-to-top">Volver al Pleistoceno</a></p>
+        <p><a href="#inicio" class="back-to-top">Volver al Mesozoico</a></p>
       </div>
     </footer>
   </body>
