--- a/404.html
+++ b/404.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error 404 - Página no encontrada</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=DM+Serif+Display:ital@0;1&family=Wendy+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/404.css">
-    
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=DM+Serif+Display:ital@0;1&family=Wendy+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/404.css" />
+  </head>
+  <body>
     <div class="container">
-        <figure>
-            <img
-                src="images/error 404.jpg" Article Cover Image
-                style="width: 50%; height: auto" />
-            <figcaption>
-                Source:
-                <a href="https://cdn2.vectorstock.com/i/1000x1000/63/11/error-design-vector-4346311.jpg" target="_blank">vectorstock</a>
-            </figcaption>
-        </figure>
+      <figure>
+        <img
+          src="images/error 404.jpg"
+          Article
+          Cover
+          Image
+          style="width: 50%; height: auto"
+        />
+        <figcaption>
+          Source:
+          <a
+            href="https://cdn2.vectorstock.com/i/1000x1000/63/11/error-design-vector-4346311.jpg"
+            target="_blank"
+            >vectorstock</a
+          >
+        </figcaption>
+      </figure>
 
-        
-        <p>¡RAWR! La página que buscas ha sido destruida por un meteorito.</p>
-        <a href="/" class="button">Volver al pleistoceno</a>
+      <p>¡RAWR! La página que buscas ha sido destruida por un meteorito.</p>
+      <a href="/" class="button">Volver al Mesozoico</a>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
